test-app/mongodb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finnova-mongodb-operator
  labels:
    stage: admin
