test-app/mongodb/deployment.yaml
# Source: enterprise-operator/templates/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-enterprise-operator
  namespace: finnova-mongodb-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: mongodb-enterprise-operator
      app.kubernetes.io/instance: mongodb-enterprise-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: mongodb-enterprise-operator
        app.kubernetes.io/instance: mongodb-enterprise-operator
    spec:
      serviceAccountName: mongodb-enterprise-operator
      containers:
      - name: mongodb-enterprise-operator
        image: quay.io/mongodb/mongodb-enterprise-operator-ubi:1.17.2
        imagePullPolicy: Always
        args:
        - -watch-resource=mongodb
        - -watch-resource=opsmanagers
        - -watch-resource=mongodbusers
        command:
        - /usr/local/bin/mongodb-enterprise-operator
        resources:
          limits:
            cpu: 1100m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 200Mi
